framec_tests/language_specific/typescript/v3_capabilities/system_params/positive/system_params_v3.frm
@target typescript

# V3 capability: system parameters ($(start), $>(enter), domain) for TypeScript.
# Compile/validate-only; runtime glue is still being implemented.

system SystemParamsDemoTs($(startState), $>(enterEvent), domain) {
    interface:
        run()

    machine:
        $Idle {
            run() {
                -> $Running()
            }
        }

        $Running {
            run() {
                -> $Idle()
            }
        }
}

