framec_tests/language_specific/typescript/v3_capabilities/system_params/negative/system_domain_param_mismatch_v3.frm
@target typescript
# @expect: E418

// Negative: domain param name does not match any variable in domain: block.

system SystemDomainParamMismatchTs($(color), $>(enterColor), badDomain) {
    interface:
        run()

    machine:
        $Red(color: string) {
            $>(enterColor: string) {
            }
            run() {
                -> $Red(color)
            }
        }

    domain:
        domain = null
}

